# Development-and-visualization-of-optimization-algorithms

./: .gitignore  FunctionObj_v1.py  LICENSE  README.md  plotting.py  requirements.txt  setup.py  test_ui.py
cpp/: CMakeLists.txt  function.cpp  function.h  gradient_descent.cpp  sqp.cpp
python/: FunctionObj_v1.py  InteriorPointMethod.py  dirty_interface.py  parcer_vAlpha  plotting.py  setup.py  test_ui.py
python/ui/: main.ui
ui/: main.ui
