cmake_minimum_required(VERSION 3.5)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_library(function STATIC function.cpp)
add_executable(gd gradient_descent.cpp)
target_link_libraries(gd function)
if ( MSVC )
    set_target_properties(gd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE . )
endif ( MSVC )
